# flatrecord

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: dynamic_parsing.rs
examples/: records.rs  struct_root.rs  struct_root_vec.rs
flatrecord-derive/: Cargo.toml
flatrecord-derive/src/: lib.rs
src/: dynamic.rs  error.rs  lib.rs  schema.rs
tests/: records.rs
