[package]
name = "flatrecord"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
version = "0.1.0"
edition = "2024"
description = "Compact, schema-described binary record encoding with a derive macro."
readme = "README.md"
homepage = "https://anza.xyz/"
repository = "https://github.com/anza-xyz/flatrecord"
license = "Apache-2.0"
keywords = ["serialization", "binary", "packed", "schema", "derive"]
categories = ["encoding", "data-structures"]

[workspace]
members = [".", "flatrecord-derive"]
resolver = "3"

[dependencies]
flatrecord-derive = { path = "flatrecord-derive", version = "0.1.0" }
thiserror = "2.0.18"
wincode = { version = "0.5.5", features = ["derive"] }
