[package]
name = "flatrecord"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
version = "0.1.0"
edition = "2024"
description = "Compact, schema-described binary record encoding with a derive macro."
readme = "README.md"
homepage = "https://anza.xyz/"
repository = "https://github.com/anza-xyz/flatrecord"
license = "Apache-2.0"
keywords = ["serialization", "binary", "packed", "schema", "derive"]
categories = ["encoding", "data-structures"]

[workspace]
members = [".", "flatrecord-derive"]
resolver = "3"

[dependencies]
flatrecord-derive = { path = "flatrecord-derive", version = "0.1.0" }
thiserror = "2.0.18"
wincode = { version = "0.5.5", features = ["derive"] }

[dev-dependencies]
criterion = "0.5.1"
wincode-dynamic = { git = "https://github.com/cpubot/wincode-dynamic.git", rev = "2fc898273636dccbcb74005d923b095043f5b20e" }

[[bench]]
name = "dynamic_parsing"
harness = false
