[package]
name = "flatrecord-derive"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Derive macro for the flatrecord crate."
license = "MIT OR Apache-2.0"
repository = "https://github.com/apfitzge/flatrecord"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
