[package]
name = "flatrecord-derive"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
version = "0.1.0"
edition = "2024"
description = "Derive macro for the flatrecord crate."
homepage = "https://anza.xyz/"
repository = "https://github.com/anza-xyz/flatrecord"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
